IconBorder: Accept drag&drop events

Summary:
..and forward them to KateViewInternal. This way is dropping text to
column 1 of the view much less cumbersome

BUG: 405280
FIXED-IN: 5.57

Reviewers: #ktexteditor, dhaumann

Reviewed By: #ktexteditor, dhaumann

Subscribers: dhaumann, kwrite-devel, kde-frameworks-devel, #ktexteditor

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D19681